# pyNastran

./: .codacy.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .pycodestyle  .readthedocs.yml  .travis.yml  BDF.md  BDF_Validation.md  CrossReferencing.md  DeveloperDocs.md  Doxyfile  F06.md  FutureDevelopmentIdeas.md  GUI.md  InstallationGuide.md  LICENSE.md  LearningPython.md  LicenseInfo.md  LinesOfCodeReduction.md  OP2.md  OP4.md  Optimization.md  ProjectHome.md  README.md  README.rst  RoadMap.txt  SECURITY.md  What_Is_Nastran.md  WhyPyNastran.md  __init__.py  _setup.py  applyLicense.py  appveyor.yml  bdf_crossReferencing.txt  bdf_readWrite.txt  codeAster_write.txt  code_of_conduct.md  codecov.yml  (+25 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yml  main_bkp.yml  test_yml.py
branches/locr_2012/: releaseNotes.txt  requirements.txt
branches/v0.1_2011-11-09/: RoadMap.txt  releaseNotes.txt  setup.py
branches/v0.2_2011-12-20/: RoadMap.txt  makeDocumentation.py  setup.py
branches/v0.3_2012-2-8/: README.txt  bdf_crossReferencing.txt  op2_reading.txt
branches/v0.4_2012-4-23/: README.txt  releaseNotes.txt  setup.py
branches/v0.4_p32/: releaseNotes.txt  setup.py
branches/v0.5_py27_2012-8-12/: releaseNotes.txt  setup.py
branches/v0.5_py32_2012-8-14/: Doxyfile  op2_reading.txt  releaseNotes.txt  setup.py
branches/v0.6/: Doxyfile  releaseNotes.txt  setup.py
demo/: bdf_demo.ipynb  bdf_demo.py  op2_demo.ipynb  op4_demo.ipynb  op4_demo.py
dev/: abaqus_to_nastran.spec  bdf.spec  bdf_crossReferencing.txt  bdf_readWrite.txt  build_gui.py  codeAster_write.txt  errors.txt  how_to_build_gui.txt  logo.pptx  plans.txt  pyNastranGUI.spec  pyNastranGUI_build.sh  pyNastranGUI_qt.spec  pyproject.toml  readme_mypy.txt  release.py  release_process.txt  remove_test_files.py  requirements_build_gui.txt  test_files.txt  testing.txt
docs/: README.txt  index.rst  sphinx_howto.txt
docs/html_docs/: README.txt  conf.py  features.rst  get_classes_in_file.py  index.rst  makeIndex.py  make_index.py
docs/index_rst/: pyNastran.rst
docs/manual_rst/: bdf_user.rst
docs/pyNastran_in_MATLAB_example/: BAH_Plane.bdf  BAH_Plane.f06  BAH_Plane.op2  get_eigenvalues_eigenvectors.m  get_flutter_bdf.m  main.m  mat2nparray.m  ndarray2mat.m  readme.txt
docs/quick_start/: install.txt
docs/quick_start_rst/: Installation.rst  bdf.rst  gui.rst  index.rst  op2.rst
docs_sphinx/: README.txt  conf.py  index.rst  makeIndex.py
docs_sphinx/index/: pyNastran.applications.contact.rst  pyNastran.bdf.bdfInterface.rst  pyNastran.bdf.cards.rst  pyNastran.bdf.cards.test.rst  pyNastran.bdf.dmap.rst  pyNastran.bdf.rst  pyNastran.bdf.test.cards.rst  pyNastran.bdf.test.rst  pyNastran.bdf.test.unit.rst  pyNastran.converters.LaWGS.rst  pyNastran.converters.cart3d.rst  pyNastran.converters.nastran.rst  pyNastran.converters.panair.rst  pyNastran.converters.rst  pyNastran.converters.shabp.rst  pyNastran.converters.stl.rst  pyNastran.converters.tetgen.rst  pyNastran.converters.usm3d.rst  pyNastran.f06.rst  pyNastran.f06.tables.rst  pyNastran.f06.test.rst  pyNastran.op2.result_objects.rst  pyNastran.op2.rst  pyNastran.op2.tables.rst  (+12 more)
h5Nastran/: LICENSE.md  README.md  example.py  load_all_models.py
licenses/: README.txt  applyLicense.py  build_2to3.py  h5py.txt  header.txt  numpy.txt  pandas.txt  pyqt.txt  pythonLineCounter.py  pytonLineCounter.py  scipy.txt  vtk.txt
models/: 2dtruss_expected.f06  Simple_Example.bdf  actuator_tf_modeling.op2  aerobeam.bdf  beam_modes_m1.op2  bend_A1_105.bdf  blade_2dv.bdf  blade_2dv.f06_fatal  buckling_solid_shell_bar.bdf  cpenta.op2  ctetra.op2  custom_geom.csv  custom_geom.txt  d200pe10.bdf  dmig.bdf  dofm12.op2  dynamic_syntax.py  extse10.op4  extse20.op4  flat_plate_metallic_cquadr_force_subcase_03.txt  fmondsp.f06  fmondsp.op2  freq_solid_shell_bar.bdf  fsi.bdf  fsi.f06  fsi.op2  fsi.pch  gag16.bdf  hd15306.bdf  hd15901.bdf  hd15901.f06  hm14.op2  hyper.bdf  iSat_launch.inc  include2.inc  loads.f06  loads.op2  make_op4_deck.sh  mat_b_s1.op4  mat_b_s2.op4  (+31 more)
pyNastran/: __init__.py  all_tests.py  all_tests_no_gui.py  all_tests_no_matplotlib.py  nptyping.py  nptyping_interface.py  todo.txt
pyNastran/nastranwrapper-using_pynastran/: MANIFEST.in  README.txt  setup.cfg
pyNastran/nastranwrapper-using_pynastran/docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
pyNastran/nastranwrapper-using_pynastran/src/nastranwrapper/: nastran.py
pyNastran/nastranwrapper-using_pynastran/src/nastranwrapper/test/: fake_nastran.py  test_bar3truss.py  test_bar3truss_correct_output.op2  test_bar3truss_correct_output.out  test_nastran_wrapper_with_multiple_models.py
pyNastran/nastranwrapper-using_pynastran/src/nastranwrapper/test/bar3truss/: bar3_dynamic_nastran.py  bar3_nastran.py  bar3_optimization.py  bar3_static_nastran.py
pyNastran/nastranwrapper-using_pynastran/src/nastranwrapper/test/bdf_files/: bar10.bdf  bar25.bdf  bar25_op2.bdf  bar3.bdf  bar3_bad_op2.bdf  bar3_op2.bdf  dome.bdf  dome_op2.bdf  ring_25dv_op2.bdf  test_bar3truss_correct_input.bdf  vared_bar3.bdf  vared_bar3_mod_op2.bdf
pyNastran/nastranwrapper-using_pynastran/src/nastranwrapper/test/nastran_models/: bar10_static_nastran.py  blade_2dv_static_nastran.py  comp_module_static_nastran.py  comp_plate_static_nastran.py  dome_static_nastran.py
pyNastran_gui/: all_tests.py
pynastran/: __init__.pyi  docopt_types.py  egg_info.py  gui_io.py  log.pyi  mathematics.py  nastran_utils.py
quick_start/: install.txt
trunk/: Doxyfile  README.txt  RoadMap.txt  bdf_crossReferencing.txt  bdf_readWrite.txt  f06_readWrite.txt  op2_reading.txt  pyNastranGUI_build.sh  releaseNotes.txt  setup.py
wiki/: BDF.wiki  BDF_Validation.wiki  CardsVersion0point1.wiki  CodeValidation.wiki  CrossReferencing.wiki  DeveloperDocs.wiki  F06.wiki  FutureDevelopmentIdeas.wiki  GUI.wiki  Home.wiki  InstallationGuide.wiki  LearningPython.wiki  LicenseInfo.wiki  LinesOfCodeReduction.wiki  OP2.wiki  OP4.wiki  Optimization.wiki  PageName.wiki  What_Is_Nastran.wiki  WhyPyNastran.wiki  coordinateSystems.wiki  fieldWriter.wiki
(+6701 files in other folders)
