# https://peps.python.org/pep-0621/
# pip wheel . --no-build-isolation -vvv

#-------------------------------------------------------------------------------------------
[project]
name = "pyNastran"
version = "1.4.0"
description = "pyNastran project"
#long_description = "pyNastran project"   # renamed to readme

authors = [
    {name = "Steve Doyle", email="asdf@gmail.com.com"},
    #{email = "info@example.com"}
]
license = {file = "LICENSE.txt"}
#readme = {file = "README.md"}  # doesn't work
#readme = "pyNastran project"   # it's looking for a file
#readme = "README.md"           # doesn't work

requires-python = ">=3.9"

#keywords = ["packaging", "dependency", "infer", "pyproject.toml"]
keywords = ["nastran"]

classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD-3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Requirements: This is done differently by poetry!
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'cpylog>=1.4.0',
]
#-------------------------------------------------------------------------------------------
[project.optional-dependencies]
#dev = [
#    #"black>=23",
#]

# fancy
#pandas = [
#    'pandas>=1.0,<2.0',
#]

formats = [
    'pandas>=1.0,<2.0',
    'tables',   # hdf5
    'h5py',     # hdf5
]
gui_pyqt5 = [
    'PyQt5',    # gui library
    'vtk>=9.0', # rendering library
    "pyNastran[formats]",
]
#gui_pyqt6_buggy = [
#    # PyQt6 buggy
#    'PyQt6',    # gui library
#    'vtk>=9.0', # rendering library
#    "pyNastran[formats]",
#]
gui_pyside2 = [
    'PySide2',  # gui library
    'vtk>=9.0', # rendering library
    "pyNastran[formats]",
]
gui_pyside6 = [
    'PySide6',  # gui library
    'vtk>=9.0', # rendering library
    "pyNastran[formats]",
]
gui = gui_pyside6
#----
all = [
    "pyNastran[gui]",
]
dev = [
    "pyNastran[all]",
    "tox",
    "pre-commit",
    "bump2version",
    "setuptools>=66.0",
    "wheel",
]
none = []
#-------------------------------------------------------------------------------------------
[project.scripts]
#poetry = "infer_pyproject.cli:main"
pyNastranGUI = "pyNastran.gui.gui:cmd_line"

#-------------------------------------------------------------------------------------------
[project.urls]

homepage        = "https://github.com/SteveDoyle2/pyNastran/"
issue_tracker   = "https://github.com/SteveDoyle2/pyNastran/issues"
documentation   = "https://pynastran-git.readthedocs.io/en/1.3/"
repository      = "https://github.com/SteveDoyle2/pyNastran.git"

#-------------------------------------------------------------------------------------------
[build-system]
requires = [

# main
    "setuptools >= 66.0.0",
    "setuptools_scm[toml]>=6.2",
    "wheel<0.40",
]
build-backend = "setuptools.build_meta"
#requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]

#-------------------------------------------------------------------------------------------
# makes "pip wheel ." work
# lets us create a wheel for distribution
#
[tool.distutils.bdist_wheel]
universal = true

#-------------------------------------------------------------------------------------------
# https://github.com/sphinx-toolbox/sphinx-pyproject/blob/master/pyproject.toml
[tool.setuptools]
include-package-data = false
#packages = ["pyNastran"]

[tool.setuptools.packages.find]
# https://stackoverflow.com/questions/75387904/how-to-exclude-tests-folder-from-the-wheel-of-a-pyproject-toml-managed-lib
# don't include pdfs/dat files in the wheel
#find = {}
#where
include = ["pyNastran*"]
#include = ["pkg*"]

exclude = [
    'models/*',
    'pyNastran/converters/dev*',
    'pyNastran/converters/dev*',
    #'pyNastran/bdf/*.bdf'
]

#-------------------------------------------------------------------------------------------

#[tool.setuptools_scm]
