[metadata]
name = nastranwrapper
version = 0.14
summary = OpenMDAO component wrapper for MSC Nastran
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/nastranwrapper
download-url = 
author = Andrew Rodriguez
author-email = 
maintainer = Herb Schilling
maintainer-email = hschilling@nasa.gov
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = MSC Nastran
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]
